# haproxy-geoip2

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yaml
module/: Cargo.toml
module/src/: lib.rs
src/: asn.rs  city.rs  db.rs  lib.rs
tests/: Cargo.toml  haproxy.cfg  haproxy.lua
tests/src/: lib.rs
